--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,18 @@
 {
   "plugins": ["prettier", "@typescript-eslint", "import"],
-  "extends": ["airbnb", "airbnb/hooks", "next/core-web-vitals", "prettier"],
+  "extends": ["airbnb", "airbnb/hooks", "next/core-web-vitals", "prettier", "plugin:storybook/recommended"],
   "settings": {
     "import/resolver": {
       "typescript": {}
     }
   },
-
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".jsx", ".tsx"] }],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".jsx", ".tsx"]
+      }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
@@ -45,7 +49,12 @@
     "no-shadow": "off",
     "@typescript-eslint/no-shadow": "warn",
     "camelcase": "off",
-    "no-console": ["warn", { "allow": ["warn", "error", "log"] }],
+    "no-console": [
+      "warn",
+      {
+        "allow": ["warn", "error", "log"]
+      }
+    ],
     "no-underscore-dangle": "off",
     "consistent-return": "off",
     "react/no-danger": "off"
