--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@svgr/webpack": "^8.1.0",
     "D": "^1.0.0",
     "next": "13.4.19",
@@ -18,6 +22,9 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@emotion/babel-plugin": "^11.11.0",
+    "@emotion/babel-preset-css-prop": "^11.10.0",
     "@storybook/addon-actions": "^7.4.2",
     "@storybook/addon-essentials": "^7.4.2",
     "@storybook/addon-interactions": "^7.4.2",
@@ -36,6 +43,9 @@
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "autoprefixer": "^10.4.15",
+    "babel-loader": "^8.3.0",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-twin": "^1.1.0",
     "eslint": "^8.49.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.5.1",
@@ -50,6 +60,7 @@
     "prettier-plugin-tailwindcss": "^0.4.1",
     "storybook": "7.4.1",
     "tailwindcss": "^3.3.3",
+    "twin.macro": "^3.4.0",
     "typescript": "^5.2.2"
   }
 }
